    * [OPENJPA-1546] - OpenJPA doesn't work as internal JPA inside web applicaion in JBoss AS
    * [OPENJPA-1547] - NOT IN with MEMBER OF returns syntax error
    * [OPENJPA-1556] - Exception thrown on first use of @Strategy in @Embeddable classes
    * [OPENJPA-1558] - Many side of a MxO relationship contains null reference if One side is loaded first.
    * [OPENJPA-1565] - QueryTimeOut and LockTimeOut exceptions are not raised correctly
    * [OPENJPA-1568] - Make createConnectionFactory() in JDBCConfigurationImpl public
    * [OPENJPA-1570] - Exception using @Strategy in @MappedSuperclass or @Embeddable classes
    * [OPENJPA-1571] - The change in the element collection is not persisted to the database during merging a detached entity
    * [OPENJPA-1573] - Incorrect SQL for HAVING = entity variable
    * [OPENJPA-1575] - Query parameter on externalized field breaks Prepared Query Cache
    * [OPENJPA-1576] - maven plugin broken as of 3/16/2010 2:30 AM PST using openjpa-2.0.0-SNAPSHOT 
    * [OPENJPA-1577] - Using @Strategy in Queries not working properly
    * [OPENJPA-1578] - CacheStoreMode.REFRESH is not recognized
    * [OPENJPA-1580] - Using firstResult and maxResults in queries is not working properly
    * [OPENJPA-1581] - getCache() should throw IllegalStateException if the EMF has been closed. 
    * [OPENJPA-1583] - Update by query fails on entities using Timestamp as Version field
    * [OPENJPA-1588] - modify 925451 revision for setProperty processing for enums

Improvement
-----------
    * [OPENJPA-979] - Define process for contributions 
    * [OPENJPA-1118] - code changes towards broader use of JDK5 features
    * [OPENJPA-1443] - Turn on some additional DataCache and PCData testcases
    * [OPENJPA-1492] - Change access on ReverseMappingTool#getAnnotationsForMeta(Object) from private to public
    * [OPENJPA-1498] - Update localizer.properties files for easier translation
    * [OPENJPA-1530] - MySQL storage engine support