@@ -305,6 +305,8 @@ in each release of OpenJPA.</P>
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1558'>OPENJPA-1558</a>] -         Many side of a MxO relationship contains null reference if One side is loaded first.
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1562'>OPENJPA-1562</a>] -         EntityManager:Refresh on Removed entity does not trigger IllegalArgumentException
+</li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1565'>OPENJPA-1565</a>] -         QueryTimeOut and LockTimeOut exceptions are not raised correctly
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1568'>OPENJPA-1568</a>] -         Make createConnectionFactory() in JDBCConfigurationImpl public
@@ -330,6 +332,8 @@ in each release of OpenJPA.</P>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1583'>OPENJPA-1583</a>] -         Update by query fails on entities using Timestamp as Version field
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1588'>OPENJPA-1588</a>] -         modify 925451 revision for setProperty processing for enums
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1596'>OPENJPA-1596</a>] -         Index name too long for DB2 zOS
 </li>
 </ul>
     
@@ -359,6 +363,8 @@ in each release of OpenJPA.</P>
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1552'>OPENJPA-1552</a>] -         Enable EntityManager to perform property QueryImpl creation by its subclass
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1557'>OPENJPA-1557</a>] -         Logging configuration is difficult for running tests
+</li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1561'>OPENJPA-1561</a>] -         Cache Criteria Query
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1566'>OPENJPA-1566</a>] -         Provide all the cached prepared query strings in QueryStatistics
@@ -372,6 +378,10 @@ in each release of OpenJPA.</P>
 <h4>Test</h4>
 <ul>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1411'>OPENJPA-1411</a>] -         Include DayTrader test case to OpenJpa
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1560'>OPENJPA-1560</a>] -         Additional tests for JDBC date/timestamp literals in JPQL
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1579'>OPENJPA-1579</a>] -         Additional test for qualified path in HAVING clause
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1586'>OPENJPA-1586</a>] -         Additional test single valued path expression which references qualified path in JPQL
 </li>
@@ -851,7 +861,9 @@ in each release of OpenJPA.</P>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1302'>OPENJPA-1302</a>] - Ehcache product derivation isn't detected when running in WebSphere</li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1305'>OPENJPA-1305</a>] - WriteBehind 'callback; broker should always be unmanaged</li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1333'>OPENJPA-1333</a>] - Oracle driver returns incorrect update count on batched insert</li>
+<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1335'>OPENJPA-1335</a>] - Alternating manual delim id tests fail</li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1338'>OPENJPA-1338</a>] - Allow comparison for VALUE(e) that maps to basic type</li>
+<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1371'>OPENJPA-1371</a>] - Insert is called instead of Update when merge() with derived Identity</li>
 </ul>
 
 <h4>Improvement</h4>
