@@ -208,6 +208,7 @@ Bug
     * [OPENJPA-1547] - NOT IN with MEMBER OF returns syntax error
     * [OPENJPA-1556] - Exception thrown on first use of @Strategy in @Embeddable classes
     * [OPENJPA-1558] - Many side of a MxO relationship contains null reference if One side is loaded first.
+    * [OPENJPA-1562] - EntityManager:Refresh on Removed entity does not trigger IllegalArgumentException
     * [OPENJPA-1565] - QueryTimeOut and LockTimeOut exceptions are not raised correctly
     * [OPENJPA-1568] - Make createConnectionFactory() in JDBCConfigurationImpl public
     * [OPENJPA-1570] - Exception using @Strategy in @MappedSuperclass or @Embeddable classes
@@ -221,6 +222,7 @@ Bug
     * [OPENJPA-1581] - getCache() should throw IllegalStateException if the EMF has been closed. 
     * [OPENJPA-1583] - Update by query fails on entities using Timestamp as Version field
     * [OPENJPA-1588] - modify 925451 revision for setProperty processing for enums
+    * [OPENJPA-1596] - Index name too long for DB2 zOS
 
 Improvement
 -----------
@@ -236,6 +238,7 @@ Improvement
     * [OPENJPA-1549] - StateManagerImpl performance improvement
     * [OPENJPA-1551] - Allow connectionFactoryName to be specified when creating an EntityManager
     * [OPENJPA-1552] - Enable EntityManager to perform property QueryImpl creation by its subclass
+    * [OPENJPA-1557] - Logging configuration is difficult for running tests
     * [OPENJPA-1561] - Cache Criteria Query
     * [OPENJPA-1566] - Provide all the cached prepared query strings in QueryStatistics
     * [OPENJPA-1585] - Additional trace to relate SQL pushdowns with entity action or JPQL query
@@ -244,6 +247,8 @@ Improvement
 Test
 ----
     * [OPENJPA-1411] - Include DayTrader test case to OpenJpa
+    * [OPENJPA-1560] - Additional tests for JDBC date/timestamp literals in JPQL
+    * [OPENJPA-1579] - Additional test for qualified path in HAVING clause
     * [OPENJPA-1586] - Additional test single valued path expression which references qualified path in JPQL
 
 
@@ -561,7 +566,9 @@ Bug
     * [OPENJPA-1302] - Ehcache product derivation isn't detected when running in WebSphere
     * [OPENJPA-1305] - WriteBehind 'callback; broker should always be unmanaged
     * [OPENJPA-1333] - Oracle driver returns incorrect update count on batched insert
+    * [OPENJPA-1335] - Alternating manual delim id tests fail
     * [OPENJPA-1338] - Allow comparison for VALUE(e) that maps to basic type
+    * [OPENJPA-1371] - Insert is called instead of Update when merge() with derived Identity
 
 Improvement
 -----------
